<resources>
    <string name="app_name">Weather App</string>
    <string name="current_city">Current City:</string>
    <string name="temp">Temp:</string>
    <string name="max_temp">Max Temp:</string>
    <string name="humidity">Humidity:</string>
    <string name="min_temp">Min Temp:</string>
    <string name="pressure">Pressure:</string>
    <string name="error_occured">Произошла ошибка</string>
    <string name="no_iternet">No internet!</string>
    <string name="loading">Loading</string>
</resources>
